@@ -41,5 +41,10 @@ sc8pr 2.2.dev...
 *** Add 'Ellipse' and 'Arc' classes to 'sc8pr.shape'
 *** Add 'sprite.onreset' event, called by 'sprite.ondraw'
 *** Add 'Video.splice'
+*** 'Plot' constructor can take an object with 'size' attribute in place of a size literal
+*** 'Plot.clockwise' property
+*** Add 'sc8pr.geom.smallAngle'
+*** Add 'sc8pr.misc.vector2d'
+
 
 !!! Add 'util.borderRadius'
